fixing core and ranking walmart mex